--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ main{
 	flex: 1;
 }
 
+.password .text input.font-sm{font-size: 2rem;}
+.password .text input.font-xs{font-size: 1.5rem;}
+.password .text input.font-xxs{font-size: 1rem;}
+
 .password .text input{
 	font-family: 'Inconsolata', "sans-serif";
 	font-size: 3rem;
@@ -202,3 +206,12 @@ main{
 }
 
 .submit button:hover{background-color: #9b51e0;}
+
+@media only screen and (max-width: 480px){
+	.password{padding: 1rem;}
+	.password .text input{		font-size: 1.5rem;	}
+	.password .text input.font-sm{font-size: 1.2rem;}
+	.password .text input.font-xs{font-size: 1rem;}
+	.password .text input.font-xxs{font-size: 1rem;}
+	.password .actions img{width: 24px;}
+}
